# actiona4

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  PRIVACY.md  README.md  TODO.md  deny.toml  hotstring-keyboard.md
actiona-ng/: Cargo.toml  build.rs  tauri.conf.json
actiona-ng-cli/: Cargo.toml  build.rs  tauri.conf.json
actiona-ng-cli/completions/: _actiona-ng-cli  _actiona-ng-cli.ps1  actiona-ng-cli.bash  actiona-ng-cli.fish
actiona-ng-cli/src/: args.rs  init.rs  main.rs  repl.rs  setup.rs  updates.rs
actiona-ng-cli/tests/: init.rs
actiona-ng/src/: enigo.rs  error.rs  lib.rs  scripting.rs  sized_body.rs  ts_to_js.rs  types.rs
actiona-ng/src/config/: mod.rs  settings.rs  state.rs  store.rs
actiona-ng/src/core/: mod.rs
actiona-ng/src/core/app/: js.rs  mod.rs
actiona-ng/src/core/audio/: js.rs  mod.rs
actiona-ng/src/core/clipboard/: js.rs  mod.rs
actiona-ng/src/core/color/: js.rs  mod.rs
actiona-ng/src/core/console/: js.rs
actiona-ng/src/core/directory/: js.rs
actiona-ng/src/core/displays/: js.rs  mod.rs
actiona-ng/src/core/file/: js.rs
actiona-ng/src/core/filesystem/: js.rs
actiona-ng/src/core/hotstrings/: js.rs  mod.rs
actiona-ng/src/core/image/: find_image.rs  js.rs  mod.rs
actiona-ng/src/core/js/: abort_controller.rs  cancelable_promise.rs  cancellable_promise.rs  classes.rs  concurrency.rs  date.rs  duration.rs  global.rs  mod.rs  task.rs
actiona-ng/src/core/keyboard/: js.rs  mod.rs
actiona-ng/src/platform/: mod.rs  x11.rs
actiona-ng/src/runtime/: async_resource.rs  events.rs  mod.rs  shared_rng.rs
actiona-ng/src/scripting/: callbacks.rs  mod.rs  typescript.rs
actiona-ng/src/types/: display.rs  input.rs  integers.rs  mod.rs  pid.rs  try_traits.rs
actiona-ng/src/updater/: mod.rs
actiona-ng/tests/: ui.rs
code/: Cargo.toml
code/src/: enigo.rs  lib.rs  ts_to_js.rs
code/src/core/: js.rs
code/src/core/ui/: js.rs
code/src/runtime/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
crates/action-definition/: Cargo.toml
crates/action-definition/locales/: en-US.ftl
crates/action-definition/src/: lib.rs  post_run.rs  rpc.rs  scriptable.rs
crates/action-definition/tests/: platforms.rs  serde_roundtrip.rs  translation_keys.rs  waitable.rs
crates/action-execution/: Cargo.toml
crates/action-execution/src/: context.rs  error.rs  lib.rs  post_run.rs  resolve.rs  resolve_param.rs  run.rs  runnable.rs  scope.rs  test_support.rs  tree.rs  waitable.rs
crates/build-support/: Cargo.toml
crates/build-support/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  selection.rs  sentry.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  settings.rs  state.rs  store.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: find_image.rs
crates/core/src/: enigo.rs  lib.rs  platform_info.rs  sized_body.rs
crates/core/test-data/: SOURCES.md  input.xcf
crates/doc-generator/: Cargo.toml
crates/doc-generator/src/: items.rs  main.rs  types.rs
crates/e2e/: Cargo.toml  build.rs  package-lock.json  package.json
crates/e2e/scripts/: app.ts  clipboard.ts  color.ts  concurrency.ts  console.ts  datetime.ts  directory.ts  displays.ts  file.ts  filesystem.ts  global.ts  globals.d.ts  helpers.ts  image.ts  notification.ts  path.ts  point.ts  process.ts  random.ts  rect.ts  screen.ts  size.ts  standardpaths.ts  system.ts  tsconfig.json  web.ts  windows.ts
crates/e2e/src/: lib.rs
crates/e2e/tests/: e2e.rs  manual.rs
crates/extension/: Cargo.toml
crates/extension/src/: extension.rs  host.rs  lib.rs  protocol.rs
crates/extensions/selection/: Cargo.toml  build.rs  selection.rc
crates/file-format/: Cargo.toml
crates/file-format/benches/: attachment_chunks.rs
crates/file-format/src/: attachment.rs  attachment_bytes.rs  compression.rs  database.rs  formats.rs  json.rs  lib.rs  media_type.rs
crates/inno-plugin/: Cargo.toml
crates/inno-plugin/src/: ffi.rs  lib.rs  notification.rs  path.rs  settings.rs  updates.rs
crates/installer-tools/: Cargo.toml
crates/installer-tools/src/: lib.rs  notification.rs  package.rs  settings.rs  updates.rs
crates/macros/: Cargo.toml
crates/macros/src/: class.rs  consts.rs  default_args.rs  from_js_object.rs  js_enum.rs  lib.rs  methods.rs  options.rs  platform.rs  platform_validate.rs  rpc_protocol.rs  serde.rs
crates/run/: Cargo.toml  actiona_run.rc  build.rs
crates/run/assets/: index.d.ts
crates/run/src/: args.rs  config.rs  init.rs  lib.rs  macros.rs  repl.rs
crates/screenshot/: Cargo.toml
crates/screenshot/src/: blacken.rs  capture.rs  lib.rs
crates/selection-tool/: Cargo.toml  build.rs
crates/selection-tool/src/: app.rs  cli.rs  cursor_tracker.rs  events.rs  magnifier.rs  main.rs  screenshot.rs
crates/types/: Cargo.toml
crates/types/src/: color.rs  convert.rs  display.rs  imageproc.rs  lib.rs  opencv.rs  ops.rs  platform.rs  point.rs  rect.rs  size.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: appimage.rs  archive.rs  cli.rs  constants.rs  documentation.rs  installer.rs  main.rs  package_docs.rs  signing.rs  symbols.rs  typescript.rs  util.rs  workspace.rs
doc-generator/: Cargo.toml
doc-generator/src/: items.rs  main.rs  output.rs  types.rs
doc-generator/src/input/: enums.rs  functions.rs  mod.rs  modules.rs  structs.rs
doc-generator/src/output/: mod.rs
macros/: Cargo.toml
macros/src/: class.rs  consts.rs  from_js_object.rs  js_enum.rs  lib.rs  options.rs  platform_validate.rs
run/: Cargo.toml  build.rs  tauri.conf.json  windows-manifest.xml
run/assets/: index.d.ts  index.noglobals.d.ts  tsconfig.json
run/binaries/: keep.me  selection-x86_64-unknown-linux-gnu
run/src/: args.rs  config.rs  init.rs  lib.rs  macros.rs  main.rs  repl.rs  setup.rs  updates.rs
run/src/windows/: actiona-runw.rs
run/tests/: init.rs
run/ui/: index.html
selection/: Cargo.toml
selection/src/: app.rs  events.rs  magnifier.rs  magnifier.wgsl  main.rs  screenshot.rs
(+906 files in other folders)
