[workspace]
resolver = "3"
members = [
    "crates/action-definition",
    "crates/action-execution",
    "crates/build-support",
    "crates/common",
    "crates/config",
    "crates/core",
    "crates/doc-generator",
    "crates/e2e",
    "crates/extension",
    "crates/extensions/selection",
    "crates/file-format",
    "crates/inno-plugin",
    "crates/installer-tools",
    "crates/macros",
    "crates/run",
    "crates/screenshot",
    "crates/types",
    "crates/updater",
    "crates/xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Jonathan Mercier-Ganady"]
description = "Cross-platform desktop automation tool"
documentation = "https://actiona.app"
license = "MIT"

[workspace.dependencies]
ab_glyph = "0.2.32"
arboard = "3.6.1"
arc-swap = "1.9.2"
bimap = "0.6.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
bytes = "1.12.0"
chrono = { version = "0.4.45", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.6.1", features = ["cargo", "derive"] }
clap_complete = "4.6.7"
color-eyre = "0.6.5"
console = "0.16.4"
const-default = { version = "1.0.0", features = ["derive"] }
convert_case = "0.11.0"
darling = "0.23.0"
derive-where = "1.6.1"
derive_more = { version = "2.1.1", default-features = false, features = [
    "add",
    "add_assign",
    "mul",
    "mul_assign",
    "not",
    "display",
    "deref",
    "deref_mut",
    "from",
    "into",
    "constructor",
] }
dialoguer = { version = "0.12.0", default-features = false }
directories = "6.0.0"
display-info = "0.5.9"
encoding_rs = "0.8.35"
enigo = "0.6.1"
env_logger = "0.11.11"
eyre = "0.6.12"
flate2 = "1.1.9"
fluent = "0.17.0"
futures = "0.3.32"
futures-util = "0.3.32"
http-body = "1.0.1"
http-body-util = "0.1.3"
human-units = { version = "0.5.3", features = ["si-units"] }
humansize = "2.1.3"
humantime = "2.4.0"
icons = "0.18.3"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "gif",
    "tga",
    "tiff",
    "webp",
] }
imageproc = { version = "0.27.0", default-features = false, features = [
    "rayon",
    "text",
] }
indexmap = { version = "2.14.0", features = ["serde", "rayon"] }
indicatif = "0.18.6"
infer = "0.19.0"
interprocess = { version = "2.4.2", features = ["tokio"] }
ipc-rpc = { version = "3.0.0", default-features = false }
ipnet = "2.12.0"
itertools = "0.15.0"
libc = { version = "0.2.186", default-features = false }
log = "0.4.33"
mime = "0.3.17"
mime_guess = "2.0.5"
noiselib = "0.2.4"
notzero = "1.1.0"
num-traits = "0.2.19"
once_cell = "1.21.4"
open = "5.3.6"
opencv = { version = "0.99.0", default-features = false, features = [
    "imgproc",
] }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", features = ["use-std"] }
proc-macro2 = "1.0.106"
quote = "1.0.46"
rand = "0.10.2"
rand_chacha = "0.10.0"
rayon = "1.12.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = [
    "native-tls",
    "stream",
    "multipart",
    "json",
    "form",
    "query",
] }
rfd = { version = "0.17.2", features = ["common-controls-v6"] }
rodio = { version = "0.22.2", default-features = false, features = [
    "playback",
    "flac",
    "mp3",
    "mp4",
    "vorbis",
    "wav",
    "tracing",
] }
rquickjs = { version = "0.12.0", default-features = false, features = [
    "macro",
    "futures",
    "parallel",
    "indexmap",
] }
rquickjs-serde = "0.6.1"
ruopus = "0.1.2"
rustdoc-types = "0.60.0"
rustydialogs = { version = "0.4.2", features = ["gtk4"] }
rustyline = { version = "18.0.1", features = ["derive"] }
sadness-generator = "0.7.0"
satint = { version = "0.3.2", features = ["serde", "rand"] }
sentry = "0.48.3"
sentry-rust-minidump = { version = "0.16.0", features = [
    "ipc",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_plain = "1.0.2"
shell-words = "1.1.1"
slotmap = { version = "1.1.1", features = ["serde"] }
static-dispatch = "0.3.0"
strum = { version = "0.28.0", features = ["derive"] }
swc_common = { version = "23.0.2", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "25.0.0"
swc_ecma_codegen = "28.0.2"
swc_ecma_parser = "41.1.2"
swc_ecma_transforms_base = "44.0.4"
swc_ecma_transforms_typescript = "50.0.0"
swc_sourcemap = "10.0.2"
syn = "2.0.118"
sys-locale = "0.3.2"
sysinfo = "0.39.5"
system_shutdown = "4.1.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "time",
    "process",
    "sync",
    "fs",
    "io-util",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "std",
    "env-filter",
    "fmt",
    "ansi",
    "tracing-log",
    "time",
] }
tween = "2.2.0"
two-face = "0.5.1"
unicode-segmentation = "1.13.3"
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
versions = { version = "7.0.0", features = ["serde"] }
wildmatch = "2.6.1"
winit = { version = "0.30.13", default-features = false, features = [
    "x11",
    "rwh_06",
] }

# Windows
pe-parser = "0.7.0"
tray-icon = { version = "0.24.1", default-features = false }
windows = { version = "0.62.2", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "ApplicationModel_DataTransfer",
    "Storage_Streams",
] }
windows-result = "0.4.1"
winreg = "0.56.0"
winrt-toast-reborn = "0.3.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

# Unix
ashpd = { version = "0.13.12", features = ["screencast", "screenshot"] }
ksni = "0.3.5"
libwmctl = "0.0.51"
memfd = "0.6.5"
memmap2 = "0.9.11"
notify-rust = { version = "4.18.0", default-features = false, features = [
    "z-with-tokio",
    "async",
    "images",
] }
pixels = "0.17.1"
procfs = { version = "0.18.0", default-features = false, features = ["flate2"] }
rustix = { version = "1.1.4", default-features = false, features = ["process"] }
x11rb = "0.13.2"
x11rb-async = { version = "0.13.2", features = [
    "xinput",
    "randr",
    "shm",
    "extra-traits",
    "xkb",
    "allow-unsafe-code",
] }
xkbcommon = { version = "0.9.0", default-features = false, features = ["x11"] }
xkeysym = "0.2.1"
zbus = { version = "5.16.0", default-features = false, features = ["tokio"] }
zstd = "0.13.3"

# Dev dependencies
assert_cmd = "2.2.2"
base64 = "0.22.1"
console-subscriber = "0.5.0"
criterion = { version = "0.8.2", default-features = false, features = ["rayon"] }
fluent-syntax = "0.12.0"
httptest = "0.16.4"
libtest-mimic-collect = "0.4.0"
rstest = "0.26.1"
serial_test = "3.5.0"
tempfile = "3.27.0"
tracing-test = "0.2.6"
unic-langid = "0.9.6"

# Build dependencies
built = { version = "0.8.1", features = ["git2"] }
cfg_aliases = "0.2.1"
embed-resource = "3.0.11"

[patch.crates-io]
enigo = { git = "https://github.com/enigo-rs/enigo", rev = "17fc1d5" }
ipc-rpc = { git = "https://github.com/Xaeroxe/ipc-rpc", rev = "45bdf2b" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true # needed for dump_syms to produce useful symbols
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
lto = false
debug = true
opt-level = 0
