[workspace]
resolver = "3"
members = [
    "crates/action-definition",
    "crates/action-execution",
    "crates/build-support",
    "crates/common",
    "crates/config",
    "crates/core",
    "crates/doc-generator",
    "crates/e2e",
    "crates/extension",
    "crates/extensions/selection",
    "crates/file-format",
    "crates/inno-plugin",
    "crates/installer-tools",
    "crates/macros",
    "crates/run",
    "crates/screenshot",
    "crates/types",
    "crates/updater",
    "crates/xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Jonathan Mercier-Ganady"]
description = "Cross-platform desktop automation tool"
documentation = "https://actiona.app"
license = "MIT"

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
panic_in_result_fn = "warn"
absolute_paths = "warn"

[workspace.dependencies]
ab_glyph = "0.2.32"
arboard = "3.6.1"
arc-swap = "1.9.2"
bimap = "0.6.3"
bytemuck = "1.25.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", default-features = false }
clap = "4.6.2"
clap_complete = "4.6.7"
color-eyre = "0.6.5"
console = "0.16.4"
const-default = "1.0.0"
convert_case = "0.11.0"
darling = "0.23.0"
derive-where = "1.6.1"
derive_more = { version = "2.1.1", default-features = false }
dialoguer = { version = "0.12.0", default-features = false }
directories = "6.0.0"
display-info = "0.5.9"
encoding_rs = "0.8.35"
enigo = "0.6.1"
env_logger = "0.11.11"
eyre = "0.6.12"
flate2 = "1.1.9"
fluent = "0.17.0"
futures = "0.3.32"
futures-util = "0.3.32"
http-body = "1.1.0"
http-body-util = "0.1.4"
human-units = "0.5.4"
humansize = "2.1.3"
humantime = "2.4.0"
icons = "0.18.3"
image = { version = "0.25.10", default-features = false }
imageproc = { version = "0.27.0", default-features = false }
indexmap = "2.14.0"
indicatif = "0.18.6"
infer = "0.22.0"
interprocess = "2.4.2"
ipc-rpc = { version = "3.0.1", default-features = false }
ipnet = "2.12.0"
itertools = "0.15.0"
libc = { version = "0.2.186", default-features = false }
log = "0.4.33"
mime = "0.3.17"
mime_guess = "2.0.5"
noiselib = "0.2.4"
notzero = "1.1.0"
num-traits = "0.2.19"
once_cell = "1.21.4"
open = "5.4.0"
opencv = { version = "0.99.0", default-features = false }
parking_lot = "0.12.5"
postcard = "1.1.3"
proc-macro2 = "1.0.106"
quote = "1.0.46"
rand = "0.10.2"
rand_chacha = "0.10.0"
rayon = "1.12.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false }
rfd = "0.17.2"
rodio = { version = "0.22.2", default-features = false }
rquickjs = { version = "0.12.1", default-features = false }
rquickjs-serde = "0.6.1"
ruopus = "0.1.2"
rustdoc-types = "0.60.0"
rustydialogs = "0.4.2"
rustyline = "18.0.1"
sadness-generator = "0.7.0"
satint = "0.3.2"
sentry = "0.48.5"
sentry-rust-minidump = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.150"
serde_plain = "1.0.2"
shell-words = "1.1.1"
slotmap = "1.1.1"
static-dispatch = "0.3.0"
strum = "0.28.0"
swc_common = "23.0.2"
swc_ecma_ast = "25.0.0"
swc_ecma_codegen = "28.0.2"
swc_ecma_parser = "41.1.2"
swc_ecma_transforms_base = "45.0.0"
swc_ecma_transforms_typescript = "51.0.0"
swc_sourcemap = "10.0.2"
syn = "2.0.119"
sys-locale = "0.3.2"
sysinfo = "0.39.6"
system_shutdown = "4.1.0"
thiserror = "2.0.18"
time = "0.3.53"
tokio = "1.52.4"
tokio-util = "0.7.18"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false }
turso = { version = "0.7.0", default-features = false }
tween = "2.2.0"
two-face = "0.5.1"
unicode-segmentation = "1.13.3"
url = "2.5.8"
uuid = "1.24.0"
versions = "7.0.0"
wildmatch = "2.6.1"
winit = { version = "0.30.13", default-features = false }

# Windows
pe-parser = "0.7.0"
tray-icon = { version = "0.24.1", default-features = false }
windows = "0.62.2"
windows-result = "0.4.1"
winreg = "0.56.0"
winrt-toast-reborn = "0.3.8"
zip = { version = "8.6.0", default-features = false }

# Unix
ashpd = "0.13.12"
ksni = "0.3.6"
libwmctl = "0.0.52"
memfd = "0.6.5"
memmap2 = "0.9.11"
notify-rust = { version = "4.18.0", default-features = false }
pixels = "0.17.2"
procfs = { version = "0.18.0", default-features = false }
rustix = { version = "1.1.4", default-features = false }
x11rb = "0.14.0"
x11rb-async = "0.14.0"
xkbcommon = { version = "0.9.0", default-features = false }
xkeysym = "0.2.1"
zbus = { version = "5.17.0", default-features = false }
zstd = "0.13.3"

# Dev dependencies
assert_cmd = "2.2.2"
base64 = "0.22.1"
console-subscriber = "0.5.0"
criterion = { version = "0.8.2", default-features = false }
fluent-syntax = "0.12.0"
httptest = "0.16.4"
libtest-mimic-collect = "0.4.0"
rstest = "0.26.1"
serial_test = "3.5.0"
tempfile = "3.27.0"
tracing-test = "0.2.6"
unic-langid = "0.9.6"

# Build dependencies
built = "0.8.1"
cfg_aliases = "0.2.2"
embed-resource = "3.0.11"

[patch.crates-io]
enigo = { git = "https://github.com/enigo-rs/enigo", rev = "17fc1d5" }
libwmctl = { git = "https://github.com/Jmgr/wmctl", rev = "107e43e" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true # needed for dump_syms to produce useful symbols
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
lto = false
debug = true
opt-level = 0
