[package]
name = "actiona-ng-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
default-run = "actiona-ng"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[[bin]]
name = "actiona-ng"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_System_SystemInformation",
] }

[dependencies]
actiona-ng = { path = "../actiona-ng" }

clap.workspace = true
color-eyre.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[build-dependencies]
tauri-build.workspace = true
