[package]
name = "actiona-ng-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
default-run = "actiona-ng-cli"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_System_SystemInformation",
] }

[dependencies]
actiona-ng = { path = "../actiona-ng" }

clap = { workspace = true, features = ["env"] }
color-eyre.workspace = true
console.workspace = true
humantime.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
versions.workspace = true
rquickjs.workspace = true
rustyline.workspace = true
syntect.workspace = true
shell-words.workspace = true
directories.workspace = true

[build-dependencies]
built.workspace = true
tauri-build.workspace = true
clap_complete.workspace = true
clap = { workspace = true, features = ["env"] }
cfg_aliases.workspace = true
