[package]
name = "actiona-ng"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
macros = { path = "../macros" }

async-compat.workspace = true
console.workspace = true
convert_case.workspace = true
derive_more.workspace = true
display-info.workspace = true
enigo.workspace = true
eyre.workspace = true
humantime.workspace = true
image.workspace = true
imageproc.workspace = true
indexmap.workspace = true
itertools.workspace = true
noiselib.workspace = true
num-traits.workspace = true
opencv.workspace = true
rand.workspace = true
rayon.workspace = true
rquickjs.workspace = true
serde_json.workspace = true
serde.workspace = true
slint-interpreter.workspace = true
slint.workspace = true
slotmap.workspace = true
strum.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_base.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_sourcemap.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
tween.workspace = true
wildmatch.workspace = true
once_cell.workspace = true
regex.workspace = true
spin_on.workspace = true
chrono.workspace = true
arboard.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
memfd.workspace = true
nix.workspace = true
x11rb-async.workspace = true
zbus.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tracing-test.workspace = true

[build-dependencies]
cfg_aliases.workspace = true
