[package]
name = "code"
version = "4.0.0"
edition = "2024"

[dependencies]
code-macros = { path = "../code-macros" }

thiserror.workspace = true
eyre.workspace = true
serde.workspace = true
rquickjs.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "time",
    "process",
    "sync",
] }
tokio-util.workspace = true
slint.workspace = true
slint-interpreter.workspace = true
serde_json.workspace = true
convert_case.workspace = true

strum = { version = "0.27", features = ["derive"] }
slotmap = { version = "1.0.6", features = ["serde"] }
indexmap = { version = "2.7", features = ["serde"] }
tracing = "0.1"
tween = "2.0"
derive_more = { version = "2.0", features = ["add", "mul"] }
rand = "0.9"
noiselib = "0.2"
num-traits = "0.2"
display-info = "0.5"
async-compat = "0.2"
image = "0.25"
imageproc = "0.25"
rayon = "1.10"
opencv = { version = "0.94", default-features = false, features = ["imgproc"] }
enigo = "0.3"
humantime = "2.2"
console = "0.15"
wildmatch = "2.4"

swc_common = { version = "8.0.0", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "8.0.1"
swc_ecma_codegen = "10.0.0"
swc_ecma_parser = "11.1.1"
swc_ecma_transforms_base = "12.2.0"
swc_ecma_transforms_typescript = "13.0.0"
sourcemap = "9.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
] }

[target.'cfg(unix)'.dependencies]
x11rb-async = { version = "0.13", features = [
    "xinput",
    "randr",
    "shm",
    "extra-traits",
] }
nix = { version = "0.29", features = ["poll", "mman"] }
memfd = "0.6"
zbus = "5.5"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.17"
tracing-test = "0.2"
