[package]
name = "doc-generator"
version = "1.0.0"
edition = "2024"

[dependencies]
rustdoc-types = "0.39"
serde_json.workspace = true
eyre.workspace = true
itertools.workspace = true
convert_case.workspace = true
log = "0.4"
env_logger = "0.11"
regex = "1.11"
once_cell = "1.21"
strum = { version = "0.27", features = ["derive"] }

[build-dependencies]
built = "0.7"
