[package]
name = "doc-generator"
version = "1.0.0"
edition = "2024"

[dependencies]
convert_case.workspace = true
env_logger.workspace = true
eyre.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true
rustdoc-types.workspace = true
serde_json.workspace = true
strum.workspace = true

[build-dependencies]
built.workspace = true
