[package]
name = "doc-generator"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
convert_case.workspace = true
env_logger.workspace = true
eyre.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true
rustdoc-types.workspace = true
serde_json.workspace = true
strum.workspace = true

[build-dependencies]
built.workspace = true
