[package]
name = "macros"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
quote.workspace = true
syn.workspace = true
