[package]
name = "macros"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
darling.workspace = true
proc-macro2 = "1.0.106"
quote.workspace = true
serde_json.workspace = true
syn = { workspace = true, features = ["full"] }
