[package]
name = "run"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
default-run = "actiona4-run"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[[bin]]
name = "actiona4-run"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }

[dependencies]
actiona_core = { package = "core", path = "../core" }

clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
color-eyre.workspace = true
console.workspace = true
directories.workspace = true
humantime.workspace = true
rquickjs.workspace = true
rustyline.workspace = true
shell-words.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
two-face.workspace = true
versions.workspace = true

[build-dependencies]
built.workspace = true
cfg_aliases.workspace = true
clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
tauri-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
