[package]
name = "run"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
default-run = "actiona-run"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[[bin]]
name = "actiona-run"
path = "src/bin/actiona-run.rs"

[[bin]]
name = "actiona-run-console"
path = "src/windows/actiona-run-console.rs"
required-features = ["windows-console-bin"]

[features]
default = []
windows-console-bin = []

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
] }
winrt-toast-reborn.workspace = true

[dependencies]
actiona_core = { package = "core", path = "../core" }

clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
color-eyre.workspace = true
console.workspace = true
directories.workspace = true
flate2.workspace = true
humantime.workspace = true
indicatif.workspace = true
rquickjs.workspace = true
rustyline.workspace = true
shell-words.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
two-face.workspace = true
versions.workspace = true
strum.workspace = true

[build-dependencies]
built.workspace = true
cfg_aliases.workspace = true
clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
flate2.workspace = true
tauri-build.workspace = true
strum.workspace = true

[dev-dependencies]
tempfile.workspace = true
