[package]
name = "run"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
default-run = "actiona-run"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[[bin]]
name = "actiona-run"
path = "src/bin/actiona-run.rs"

[[bin]]
name = "actiona-runw"
path = "src/windows/actiona-runw.rs"
required-features = ["windows-bin"]

[features]
default = []
windows-bin = []

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Wdk_System_SystemServices", "Win32_System_Console", "Win32_System_SystemInformation"] }
winrt-toast-reborn.workspace = true

[dependencies]
actiona_core = { package = "core", path = "../core" }

clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
color-eyre.workspace = true
console.workspace = true
directories.workspace = true
enigo.workspace = true
flate2.workspace = true
humantime.workspace = true
indicatif.workspace = true
rquickjs.workspace = true
rustyline.workspace = true
serde_json.workspace = true
shell-words.workspace = true
strum.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
two-face.workspace = true
versions.workspace = true

[build-dependencies]
built.workspace = true
cfg_aliases.workspace = true
clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
flate2.workspace = true
strum.workspace = true
tauri-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
