[package]
name = "selection"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[target.'cfg(not(windows))'.dependencies]
x11rb.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dependencies]
bytemuck.workspace = true
clap.workspace = true
common = { path = "../common" }
pixels.workspace = true
winit.workspace = true
