[package]
name = "action-definition"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
const-default.workspace = true
fluent.workspace = true
humantime.workspace = true
icons.workspace = true
macros = { path = "../macros" }
types = { path = "../types" }

serde .workspace = true
serde_json.workspace = true
slotmap.workspace = true
static-dispatch.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
fluent-syntax.workspace = true
postcard.workspace = true
rstest.workspace = true
serde_json.workspace = true
unic-langid.workspace = true
